# aldiselfcheckout

./: README.md  docker-compose.yml
k8s/: orchestrator-deployment.yml
monitoring/: prometheus.yml
services/audit-service/: pom.xml
services/cart-service/: Dockerfile  Gemfile
services/cart-service/app/controllers/: carts_controller.rb
services/cart-service/app/decorators/: cart_decorator.rb
services/cart-service/app/models/: cart.rb
services/cart-service/config/: mongoid.yml
services/discount-engine/: Dockerfile
services/discount-engine/app/: main.py
services/fraud-service/: Cargo.toml  Dockerfile
services/fraud-service/src/: main.rs
services/inventory-service/: CMakeLists.txt  Dockerfile
services/inventory-service/src/: inventory_manager.cpp  inventory_manager.h  main.cpp
services/orchestrator/: package.json  tsconfig.json
services/orchestrator/src/commands/: initialize-checkout.command.ts
services/orchestrator/src/controllers/: checkout.controller.ts
services/orchestrator/src/events/: base.event.ts
services/payment-service/: Dockerfile  go.mod
services/payment-service/cmd/api/: main.go
services/product-service/: pom.xml
services/src/: app.module.ts  index.ts
services/src/aggregates/: checkout.aggregate.ts
services/src/config/: database.config.ts
services/src/events/: checkout-initialized.event.ts
services/src/repositories/: checkout.repository.ts
services/src/sagas/: checkout.saga.ts
services/src/schemas/: event.schema.ts
shared/protos/: checkout.proto  product.proto
terraform/: main.tf
(+16 files in other folders)
