cmake_minimum_required(VERSION 3.16)
project(aldi_inventory_service)
set(CMAKE_CXX_STANDARD 20)
find_package(cpprestsdk REQUIRED)
add_executable(inventory_service src/main.cpp src/inventory_manager.cpp src/kafka_producer.cpp)
target_link_libraries(inventory_service PRIVATE cpprestsdk::cpprest pthread)
